# parallel_unpack

./: README.md  main.py  pyproject.toml
src/parallel_unpack/: __init__.py  cli.py  par_unzip.py  unpacking.py
