[project]
name = "parallel_unpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "tqdm",
    "typer",
]

[project.scripts]
parallel_unpack = "parallel_unpack.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
