[project]
name = "parallel_unpack"
version = "1.0.0"
description = "A simple and efficient library to unpack `.zip` and `.tar.gz` archives in parallel, speeding up the extraction of large archives."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "tqdm",
    "typer",
]

[project.scripts]
parallel_unpack = "parallel_unpack.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
